<resources>
    <string name="app_name">Café Booking App</string>
    <string name="select_cuising">Select Cuisine</string>
    <string name="select_date">Select dining date:</string>
    <string name="select_time">Select Time:</string>
    <string name="number_of_people"># of people</string>
    <string name="reserve">Reserve</string>
    <string name="booking_detail">Booking Details</string>
</resources>